frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: nginx
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 80
