svc.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
