ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /nginx
            backend:
              service:
                name: my-service
                port:
                  number: 80
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-service
                port:
                  number: 8082
